# vpn_routes

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
funcs/: __init__.py  classes.py  nix_functions.py  test_class_paramiko.py.bak
vpn_routes/: main.py
vpn_routes/funcs/: classes.py  main_functions.py  nix_functions.py
